the email is not being sent in development , please make it handle dev environment as well

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.0",
+        "@types/nodemailer": "^6.4.17",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "install": "^0.13.0",
         "lucide-react": "^0.438.0",
         "next": "14.2.23",
+        "nodemailer": "^6.10.0",
+        "npm": "^11.2.0",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
