--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.0",
         "@types/nodemailer": "^6.4.17",
+        "@vercel/analytics": "^1.5.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "install": "^0.13.0",
