--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
         "clsx": "^2.1.1",
         "install": "^0.13.0",
         "lucide-react": "^0.438.0",
-        "next": "14.2.23",
-        "nodemailer": "^6.10.0",
+        "mailgen": "^2.0.29",
+        "next": "^14.2.28",
+        "nodemailer": "^6.10.1",
         "npm": "^11.2.0",
         "react": "^18",
         "react-dom": "^18",
