--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@vercel/speed-insights": "^1.2.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.7.4",
         "install": "^0.13.0",
         "lucide-react": "^0.438.0",
         "mailgen": "^2.0.29",
